Fixed search result to return the correct plant

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,18 +16,12 @@
     <button id="search">Search database</button>
     <ul class="plants">
         <li><span>Name: </span><span id="plantName"></span></li>
-        <!-- <li><span>Pronounciation: </span><span id="pronounce"></span></li> -->
+        <li><span>Pronounciation: </span><span id="pronounce"></span></li>
         <li><span>Family Name: </span><span id="familyName"></span></li>
         <li><span>Scientific Name: </span><span id="scientificName"></span></li>
         <li><span>Use: </span><span id="use"></span></li>
         <li><span>Description: </span><span id="description"></span></li>
         <li><img id="image" src=""></li>
-        <!-- <li><span><%= info[0].common_name %></span></li>
-        <li><span><%= info[0].scientific_name %></span></li>
-        <li><span><%= info[0].family_name %></span></li>
-        <li><span><%= info[0].use %></span></li>
-        <li><span><%= info[0].description %></span></li>
-        <img src="<%= info[0].image %>" alt=""> -->
     </ul>
 
     <script src="/main.js"></script>
