--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Native Hawaiian Flowers Field Guide</title>
-    <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <!--Nav Bar -->
@@ -37,7 +37,7 @@
         </div>
     </nav>
     <!--Content-->
-    <section class="bg-dark text-light p-5 text-center">
+    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex">
                 <div>
@@ -48,11 +48,24 @@
             </div>
         </div>
     </section>
+    <!--Search-->
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between align-items-center">
+                <h3 class="mb-3 mb-md-0">Search For a Plant in Our Database</h3>
+                <div class="input-group plant-search">
+                    <input 
+                        type="text" 
+                        class="form-control" 
+                        placeholder="Search database" />
+                    <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Search</button>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <h2>Search for a plant</h2>
-
-    <input type="text">
-    <button id="search">Search database</button>
+    <!-- <input type="text">
+    <button id="search">Search For a Plant in Our Database</button> -->
     <ul class="plants">
         <li><span>Name: </span><span id="plantName"></span></li>
         <li><span>Pronounciation: </span><span id="pronounce"></span></li>
