Fixed event listener

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,15 +58,42 @@
                         type="text" 
                         class="form-control" 
                         placeholder="Search database" />
-                    <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Search</button>
+                    <button class="btn btn-dark btn-lg" data-bs-toggle="modal" data-bs-target="#search-plant" type="button" id="search">Search</button>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Modal -->
+    <div class="modal fade" id="search-plant" tabindex="-1" aria-labelledby="search-plantLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="search-plantLabel">Plant Result</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <ul class="plants">
+                    <li><span>Name: </span><span id="plantName"></span></li>
+                    <li><span>Pronounciation: </span><span id="pronounce"></span></li>
+                    <li><span>Family Name: </span><span id="familyName"></span></li>
+                    <li><span>Scientific Name: </span><span id="scientificName"></span></li>
+                    <li><span>Use: </span><span id="use"></span></li>
+                    <li><span>Description: </span><span id="description"></span></li>
+                    <li><img id="image" src=""></li>
+                </ul>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+            </div>
+        </div>
+        </div>
+    </div>
+
     <!-- <input type="text">
     <button id="search">Search For a Plant in Our Database</button> -->
-    <ul class="plants">
+    <!-- <ul class="plants">
         <li><span>Name: </span><span id="plantName"></span></li>
         <li><span>Pronounciation: </span><span id="pronounce"></span></li>
         <li><span>Family Name: </span><span id="familyName"></span></li>
@@ -74,8 +101,8 @@
         <li><span>Use: </span><span id="use"></span></li>
         <li><span>Description: </span><span id="description"></span></li>
         <li><img id="image" src=""></li>
-    </ul>
+    </ul> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
