--- a/views/index.ejs
+++ b/views/index.ejs
@@ -149,6 +149,16 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+        <div class="container">
+            <p class="lead">Copyright &copy; 2022 Coderlore</p>
+            <a href="#" class="position-absolute bottom-0 end-0 p-5">
+                <i class="bi bi-arrow-up-circle h1"></i>
+            </a>
+        </div>
+    </footer>
+
     <!-- <input type="text">
     <button id="search">Search For a Plant in Our Database</button> -->
     <!-- <ul class="plants">
