--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
         </div>
     </section>
     <!--Search-->
-    <section class="bg-primary text-light p-5">
+    <section class="bg-warning text-dark p-5">
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
                 <h3 class="mb-3 mb-md-0">Search For a Plant in Our Database</h3>
@@ -109,7 +109,7 @@
                             <p class="card-text">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, quae?
                             </p>
-                            <a href="#" class="btn btn-primary">Read More</a>
+                            <a href="#" class="btn btn-warning">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                             <p class="card-text">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, quae?
                             </p>
-                            <a href="#" class="btn btn-primary">Read More</a>
+                            <a href="#" class="btn btn-warning">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
         <div class="container">
             <p class="lead">Copyright &copy; 2022 Coderlore</p>
             <a href="#" class="position-absolute bottom-0 end-0 p-5">
-                <i class="bi bi-arrow-up-circle h1"></i>
+                <i class="bi bi-arrow-up-circle h1 text-warning"></i>
             </a>
         </div>
     </footer>
