--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,43 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Native Hawaiian Flowers Field Guide</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/style.css">
-</head>
-<body>
-    <!--Nav Bar -->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container">
-            <a href="#" class="navbar-brand">Native Hawaiian Flowers</a>
-            <button 
-                class="navbar-toggler" 
-                type="button" 
-                data-bs-toggle="collapse" 
-                data-bs-target="#navmenu"
-            >
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Placeholder</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Another One</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">And Another</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!--Content-->
+<%- include('partials/header') -%>
+
     <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex">
@@ -148,29 +110,5 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="p-5 bg-dark text-white text-center position-relative">
-        <div class="container">
-            <p class="lead">Copyright &copy; 2022 Coderlore</p>
-            <a href="#" class="position-absolute bottom-0 end-0 p-5">
-                <i class="bi bi-arrow-up-circle h1 text-warning"></i>
-            </a>
-        </div>
-    </footer>
-
-    <!-- <input type="text">
-    <button id="search">Search For a Plant in Our Database</button> -->
-    <!-- <ul class="plants">
-        <li><span>Name: </span><span id="plantName"></span></li>
-        <li><span>Pronounciation: </span><span id="pronounce"></span></li>
-        <li><span>Family Name: </span><span id="familyName"></span></li>
-        <li><span>Scientific Name: </span><span id="scientificName"></span></li>
-        <li><span>Use: </span><span id="use"></span></li>
-        <li><span>Description: </span><span id="description"></span></li>
-        <li><img id="image" src=""></li>
-    </ul> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
-</body>
-</html>
+    
+<%- include('partials/footer') -%>
