Added login and signup pages

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <!--Nav Bar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container">
-            <a href="#" class="navbar-brand">Native Hawaiian Flowers</a>
+            <a href="/" class="navbar-brand">Native Hawaiian Flowers</a>
             <button 
                 class="navbar-toggler" 
                 type="button" 
@@ -27,10 +27,10 @@
                         <a href="#" class="nav-link">Placeholder</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Login</a>
+                        <a href="/login" class="nav-link">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Signup</a>
+                        <a href="/signup" class="nav-link">Signup</a>
                     </li>
                 </ul>
             </div>
