--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,114 +1,17 @@
 <%- include('partials/header') -%>
 
-    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+    <section class="bg-light text-dark p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex">
                 <div>
                     <h1>Native <span class="text-warning">Flowers</span></h1>
                     <p>Discover endemic plants to Hawaii. Join us and track all of the plants you find.</p>
+                    <button><a href="/signup" class="btn btn-lg">Sign up</a></button>
+                    <button><a href="/login" class="btn btn-lg">Login</a></button>
                 </div>
-                <img class="img-fluid w-50" src="/img/undraw_flowers_vx06.svg" alt="">
-            </div>
-        </div>
-    </section>
-    <!--Search-->
-    <section class="bg-warning text-dark p-5">
-        <div class="container">
-            <div class="d-md-flex justify-content-between align-items-center">
-                <h3 class="mb-3 mb-md-0">Search For a Plant in Our Database</h3>
-                <div class="input-group plant-search">
-                    <input 
-                        type="text" 
-                        class="form-control" 
-                        placeholder="Search database" />
-                    <button class="btn btn-dark btn-lg" data-bs-toggle="modal" data-bs-target="#search-plant" type="button" id="search">Search</button>
-                </div>
+                <img class="img-fluid w-50" src="/img/undraw_blooming_re_2kc4.svg" alt="">
             </div>
         </div>
     </section>
 
-    <!-- Modal -->
-    <div class="modal fade" id="search-plant" tabindex="-1" aria-labelledby="search-plantLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="search-plantLabel">Plant Result</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <ul class="plants">
-                    <li><span>Name: </span><span id="plantName"></span></li>
-                    <li><span>Pronounciation: </span><span id="pronounce"></span></li>
-                    <li><span>Family Name: </span><span id="familyName"></span></li>
-                    <li><span>Scientific Name: </span><span id="scientificName"></span></li>
-                    <li><span>Use: </span><span id="use"></span></li>
-                    <li><span>Description: </span><span id="description"></span></li>
-                    <li><img id="image" src=""></li>
-                </ul>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-            </div>
-        </div>
-        </div>
-    </div>
-
-    <!-- Boxes -->
-    <section class="p-5">
-        <h3 class="p-5 text-center">Other plants you may be interested in</h3>
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-md">
-                    <div class="card bg-dark text-light">
-                        <div class="card-body text-center">
-                            <div class="h1 mb-3">
-                                <img src="https://www.mauinativenursery.com/uploads/2/7/5/1/27519427/1935594_orig.jpg" alt="" class="card-img-top">
-                            </div>
-                            <h3 class="card-title mb-3">
-                                Virtual
-                            </h3>
-                            <p class="card-text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, quae?
-                            </p>
-                            <a href="#" class="btn btn-warning">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="card bg-secondary text-light">
-                        <div class="card-body text-center">
-                            <div class="h1 mb-3">
-                                <img src="https://www.mauinativenursery.com/uploads/2/7/5/1/27519427/1935594_orig.jpg" alt="" class="card-img-top">
-                            </div>
-                            <h3 class="card-title mb-3">
-                                Virtual
-                            </h3>
-                            <p class="card-text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, quae?
-                            </p>
-                            <a href="#" class="btn btn-dark">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="card bg-dark text-light">
-                        <div class="card-body text-center">
-                            <div class="h1 mb-3">
-                                <img src="https://www.mauinativenursery.com/uploads/2/7/5/1/27519427/1935594_orig.jpg" alt="" class="card-img-top">
-                            </div>
-                            <h3 class="card-title mb-3">
-                                Virtual
-                            </h3>
-                            <p class="card-text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, quae?
-                            </p>
-                            <a href="#" class="btn btn-warning">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    
 <%- include('partials/footer') -%>
