--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Placeholder</a>
+                        <a href="/search" class="nav-link">Search</a>
                     </li>
                     <li class="nav-item">
                         <a href="/login" class="nav-link">Login</a>
