--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <!--Nav Bar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container">
-            <a href="/" class="navbar-brand">Native Hawaiian Flowers</a>
+            <a href="/profile" class="navbar-brand">Native Hawaiian Flowers</a>
             <button 
                 class="navbar-toggler" 
                 type="button" 
