Added comments model, controller, and route

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,3 +1,5 @@
+<%- include('partials/header') -%>
+
     <!--Search-->
     <section class="bg-warning text-dark p-5">
         <div class="container">
