--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,12 +26,12 @@
                     <li class="nav-item">
                         <a href="/search" class="nav-link">Search</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="/login" class="nav-link">Login</a>
                     </li>
                     <li class="nav-item">
                         <a href="/signup" class="nav-link">Signup</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
