Troubleshooting mongodb error

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -7,7 +7,7 @@
       <div class="row justify-content-between">
         <form
           class="col-1"
-          action="/post/likePost/<%= post.id %>?_method=PUT"
+          action="/post/likePost/<%= post._id %>?_method=PUT"
           method="POST"
         >
           <button class="btn btn-primary fa fa-heart" type="submit"></button>
@@ -15,7 +15,7 @@
         <h3 class="col-3">Likes: <%= post.likes %></h3>
         <%if(post.user == user.id){ %>
         <form
-          action="/post/deletePost/<%= post.id %>?_method=DELETE"
+          action="/post/deletePost/<%= post._id %>?_method=DELETE"
           method="POST"
           class="col-3"
         >
@@ -43,7 +43,7 @@
           User <%= comments[i].createdBy%> says:"<%= comments[i].comment%>"
         <%if(comments[i].createdById == user.id) {%>
         <form
-          action="/comment/deleteComment/<%= post.id %>/<%=comments[i]._id %>?_method=DELETE"
+          action="/comment/deleteComment/<%= post._id %>/<%=comments[i]._id %>?_method=DELETE"
           method="POST"
         >
           <button class="btn fa fa-trash btn-outline-danger" type="submit"></button>
