--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="p-5 bg-dark text-white text-center position-relative">
+<footer class="p-5 bg-dark text-white text-center page-footer fixed-bottom">
     <div class="container">
         <p class="lead">Copyright &copy; 2022 Coderlore</p>
         <a href="#" class="position-absolute bottom-0 end-0 p-5">
