--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,9 @@
-<footer class="p-5 bg-dark text-white text-center page-footer fixed-bottom">
+<footer class="p-5 bg-dark text-white text-center page-footer absolute-bottom">
     <div class="container">
         <p class="lead">Copyright &copy; 2022 Coderlore</p>
-        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+        <!-- <a href="#" class="position-absolute bottom-0 p-5">
             <i class="bi bi-arrow-up-circle h1 text-warning"></i>
-        </a>
+        </a> -->
     </div>
 </footer>
 
