--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 <div class="container overflow-auto">
-  <div class="row justify-content-center mt-5 overflow-scroll">
+  <div class="row justify-content-center overflow-auto">
     <div class="col-6">
       <h2><%= post.title %></h2>
       <img class="img-fluid" src="<%= post.image%>" />
