--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 
     <!--Search-->
-    <section class="bg-warning text-dark p-5">
+    <section class="bg-warning text-dark p-5 mt-5">
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
                 <h3 class="mb-3 mb-md-0">Search For a Plant in Our Database</h3>
