Added location parameter for MVC

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -25,6 +25,8 @@
       </div>
     </div>
     <div class="col-3 mt-5">
+      <p><%= post.location %></p>
+    </div><div class="col-3 mt-5">
       <p><%= post.caption %></p>
     </div>
     <div class="mt-5">
