--- a/views/post.ejs
+++ b/views/post.ejs
@@ -17,7 +17,7 @@
         <form
           action="/post/deletePost/<%= post._id %>?_method=DELETE"
           method="POST"
-          class="col-3"
+          class="col-2"
         >
           <button class="btn btn-primary fa fa-trash" type="submit"></button>
         </form>
@@ -25,9 +25,12 @@
       </div>
     </div>
     <div class="col-3 mt-5">
-      <p><%= post.location %></p>
-    </div><div class="col-3 mt-5">
-      <p><%= post.caption %></p>
+      <div class="col-3 mt-5">
+        <p class="fa fa-map-pin"> <%= post.location %></p>
+      </div><div class="col-3 mt-3">
+        <p><u>Notes</u></p>
+        <p><%= post.caption %></p>
+      </div>
     </div>
     <div class="mt-5">
       <h2>Add a comment</h2>
