--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
                 <div>
                     <h1>Native <span class="text-warning">Flowers</span></h1>
                     <p>Discover endemic plants to Hawaii. Join us and track all of the plants you find.</p>
-                    <button><a href="/signup" class="btn btn-lg">Sign up</a></button>
-                    <button><a href="/login" class="btn btn-lg">Login</a></button>
+                    <button><a href="/signup" class="btn btn-lg btn-warning">Sign up</a></button>
+                    <button><a href="/login" class="btn btn-lg btn-dark">Login</a></button>
                 </div>
                 <img class="img-fluid w-50" src="/img/undraw_blooming_re_2kc4.svg" alt="">
             </div>
