Added API result to search

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -52,13 +52,13 @@
                     <div class="card bg-dark text-light">
                         <div class="card-body text-center">
                             <div class="h1 mb-3">
-                                <img src="https://www.mauinativenursery.com/uploads/2/7/5/1/27519427/1935594_orig.jpg" alt="" class="card-img-top">
+                                <img src="" alt="" class="card-img-top" id="plant1-image">
                             </div>
-                            <h3 class="card-title mb-3">
-                                Virtual
+                            <h3 class="card-title mb-3" id="plant1-name">
+                                
                             </h3>
-                            <p class="card-text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, quae?
+                            <p class="card-text" id="plant1-description">
+                                
                             </p>
                             <a href="#" class="btn btn-warning">Read More</a>
                         </div>
@@ -68,13 +68,13 @@
                     <div class="card bg-secondary text-light">
                         <div class="card-body text-center">
                             <div class="h1 mb-3">
-                                <img src="https://www.mauinativenursery.com/uploads/2/7/5/1/27519427/1935594_orig.jpg" alt="" class="card-img-top">
+                                <img src="" alt="" class="card-img-top" id="plant2-image">
                             </div>
-                            <h3 class="card-title mb-3">
-                                Virtual
+                            <h3 class="card-title mb-3" id="plant2-name">
+                                
                             </h3>
-                            <p class="card-text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, quae?
+                            <p class="card-text" id="plant2-description">
+                                
                             </p>
                             <a href="#" class="btn btn-dark">Read More</a>
                         </div>
