Added ability to get 3 results from the flower API to populate when search page is rendered

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -84,13 +84,13 @@
                     <div class="card bg-dark text-light">
                         <div class="card-body text-center">
                             <div class="h1 mb-3">
-                                <img src="https://www.mauinativenursery.com/uploads/2/7/5/1/27519427/1935594_orig.jpg" alt="" class="card-img-top">
+                                <img src="" alt="" class="card-img-top" id="plant3-image">
                             </div>
-                            <h3 class="card-title mb-3">
-                                Virtual
+                            <h3 class="card-title mb-3" id="plant3-name">
+                                
                             </h3>
-                            <p class="card-text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, quae?
+                            <p class="card-text" id="plant3-description">
+                                
                             </p>
                             <a href="#" class="btn btn-warning">Read More</a>
                         </div>
