Added link for button for first card in other plants.

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -60,7 +60,7 @@
                             <p class="card-text" id="plant1-description">
                                 
                             </p>
-                            <a href="#" class="btn btn-warning">Read More</a>
+                            <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#search-plant" type="button" id="plant1-btn">Read More</button>
                         </div>
                     </div>
                 </div>
