Changed anchor tags to buttons

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -76,7 +76,7 @@
                             <p class="card-text" id="plant2-description">
                                 
                             </p>
-                            <a href="#" class="btn btn-dark">Read More</a>
+                            <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#search-plant" type="button" id="plant1-btn">Read More</button>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                             <p class="card-text" id="plant3-description">
                                 
                             </p>
-                            <a href="#" class="btn btn-warning">Read More</a>
+                            <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#search-plant" type="button" id="plant1-btn">Read More</button>
                         </div>
                     </div>
                 </div>
