--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -4,8 +4,9 @@
       <h1 class="d-flex justify-content-center">Feed</h1>
       <ul class="row list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
+          <li class="col-12 justify-content-between mt-5">
+            <h3 class="d-flex justify-content-center"><%= posts.title %>Title</h3>
+            <a class="d-flex justify-content-center" href="/post/<%= posts[i]._id%>">
               <img class="img-fluid" src="<%= posts[i].image%>">
             </a>
           </li>
