--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
   <div class="container">
     <div class="row justify-content-center mt-5">
-      <h1 class="d-flex justify-content-center">Feed</h1>
+      <h1 class="d-flex justify-content-center">Flowers from the community</h1>
       <ul class="row list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
           <li class="col-12 justify-content-between mt-5">
