--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,17 @@
 <%- include('partials/header') -%>
 
-    <section class="bg-light text-dark p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
-        <div class="container">
-            <div class="d-sm-flex">
-                <div>
-                    <h1>Native <span class="text-warning">Flowers</span></h1>
-                    <p>Discover endemic plants to Hawaii. Join us and track all of the plants you find.</p>
-                    <button><a href="/signup" class="btn btn-lg btn-warning">Sign up</a></button>
-                    <button><a href="/login" class="btn btn-lg btn-dark">Login</a></button>
-                </div>
-                <img class="img-fluid w-50" src="/img/undraw_blooming_re_2kc4.svg" alt="">
+<section class="text-dark text-left text-sm-start p-5">
+    <div class="container">
+        <div class="d-sm-flex">
+            <div class="mt-3">
+                <h1>Welcome to the <br> Hawaiian Flowers Field Guide!</h1>
+                <p>Discover endemic plants to Hawaii. Join us and track all of the plants you find on your daily adventure.</p>
+                <a href="/signup" class="btn btn-lg btn-warning">Sign up</a>
+                <a href="/login" class="btn btn-lg btn-dark">Login</a>
             </div>
+            <img class="img-fluid w-50 mt-3" src="/img/undraw_blooming_re_2kc4.svg" alt="">
         </div>
-    </section>
+    </div>
+</section>
 
 <%- include('partials/footer') -%>
