--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,10 +15,11 @@
     />
     <link rel="stylesheet" href="/style.css">
 </head>
+<body class="min-h-screen">
     <!--Nav Bar -->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark p-3">
         <div class="container">
-            <a href="/profile" class="navbar-brand">Native Hawaiian Flowers</a>
+            <a href="/profile" class="navbar-brand">Hawaiian Flowers Field Guide</a>
             <button 
                 class="navbar-toggler" 
                 type="button" 
@@ -30,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="/search" class="nav-link">Search</a>
+                        <a href="/search" class="nav-link text-warning">Search</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a href="/login" class="nav-link">Login</a>
