--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,11 @@
-<footer class="p-5 bg-dark text-white text-center page-footer absolute-bottom">
-    <div class="container">
-        <p class="lead">Copyright &copy; 2022 Coderlore</p>
-        <!-- <a href="#" class="position-absolute bottom-0 p-5">
-            <i class="bi bi-arrow-up-circle h1 text-warning"></i>
-        </a> -->
-    </div>
-</footer>
-
+    <footer class="p-3 bg-dark text-white text-center sticky top-[100vh]">
+        <div class="container">
+            <p class="lead">Copyright &copy; 2022 Coderlore</p>
+            <!-- <a href="#" class="position-absolute bottom-0 p-5">
+                <i class="bi bi-arrow-up-circle h1 text-warning"></i>
+            </a> -->
+        </div>
+    </footer>
+</body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </html>
