--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,14 +1,14 @@
 <%- include('partials/header') -%>
 <div class="container">
   <div class="row mt-5">
+    <div class="w-full">
+      <h3><strong>Aloha! Welcome back, </strong> <%= user.userName %></h3>
+      <p><strong>Email</strong>: <%= user.email %></p>
+      <a href="/logout" class="btn btn-warning">Logout</a>
+    </div>
       <div class="col-6">
-          <div>
-              <p><strong>Aloha! Welcome back, </strong> <%= user.userName %></p>
-              <p><strong>Email</strong>: <%= user.email %></p>
-              <a href="/logout" class="col-3 btn btn-primary">Logout</a>
-          </div>
           <div class="mt-5">
-            <h2>Add a post</h2>
+            <h3>Add a post</h3>
             <form action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
                   <label for="title" class="form-label">Title</label>
@@ -26,11 +26,12 @@
                 <label for="imgUpload" class="form-label">Image</label>
                 <input type="file" class="form-control" id="imageUpload" name="file">
               </div>
-              <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+              <button type="submit" class="btn btn-warning" value="Upload">Submit</button>
             </form>
           </div>
       </div>
-      <div class="col-6">
+      <div class="col-6 mt-5">
+        <h3>Your posts</h3>
         <ul class="row list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
           <li class="col-6 justify-content-between mt-5">
@@ -41,7 +42,7 @@
         <% } %>
         </ul>
         <div class="row justify-content-center mt-5">
-          <a class="btn btn-primary" href="/feed">Return to Feed</a>
+          <a class="btn btn-warning" href="/feed">Return to Feed</a>
         </div>  
       </div>  
     </div>
