Added heading and image to search page

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,6 +1,17 @@
 <%- include('partials/header') -%>
 
     <!--Search-->
+    <section>
+        <div class="container">
+            <div class="d-sm-flex">
+                <div class="mt-5">
+                    <h1>Discover new plants <br>using our database</h1>
+                    <p>Type in the name of the plant you are trying to search for and the result will appear.</p>
+                </div>
+                <img class="img-fluid w-50 mt-3" src="/img/undraw_flowers_vx06.svg" alt="">
+            </div>
+        </div>
+    </section>
     <section class="bg-warning text-dark p-5 mt-5">
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
